# BoardGames-Project

./: CMakeLists.txt  README.md
include/: MainScreen.h  PlayGameFunctions.h  XO_Board.h  XO_UI.h
include/Controllers/: AppController.h  MainMenu.h  clsAppController.h  clsMainMenu.h
include/Core/: BoardGame_Classes.h  clsInputValidate.h  clsTUIUtils.h
include/Games/: FourInRow_Board.h  FourInRow_UI.h  MemoryGame_UI.h  Numerical_Board.h  Numerical_UI.h  SUS_Board.h  SUS_UI.h  XO_Board.h  XO_UI.h  clsFiveByFiveBoard.h  clsFiveByFiveUI.h  clsFourByFourXOBoard.h  clsFourByFourXOUI.h  clsFourInRowBoard.h  clsFourInRowUI.h  clsInfinityBoard.h  clsInfinityUI.h  clsMemoryGameUI.h  clsMisereBoard.h  clsMisereUI.h  clsNumericalBoard.h  clsNumericalUI.h  clsPyramidBoard.h  clsPyramidUI.h  clsSUSBoard.h  clsSUSUI.h  clsWordGameBoard.h  clsWordGameUI.h  clsXOBoard.h  clsXOUI.h
include/Players/: FourInRow_AI_Player.h  Numerical_AI_Player.h  SUS_AI_Player.h  XO_AI_Player.h  clsFiveByFiveAIPlayer.h  clsFourByFourAIPlayer.h  clsFourInRowAIPlayer.h  clsInfinityAIPlayer.h  clsMisereAIPlayer.h  clsNumericalAIPlayer.h  clsPyramidAIPlayer.h  clsSUSAIPlayer.h  clsWordGameAIPlayer.h  clsXOAIPlayer.h
src/: MainScreen.cpp  PlayGameFunctions.cpp  SUS_UI.cpp  XO_Board.cpp  XO_UI.cpp  main.cpp
src/Controllers/: AppController.cpp  MainMenu.cpp  clsAppController.cpp  clsMainMenu.cpp
src/Core/: clsTUIUtils.cpp
src/Games/: FourInRow_Board.cpp  FourInRow_UI.cpp  MemoryGame_UI.cpp  Numerical_Board.cpp  Numerical_UI.cpp  SUS_Board.cpp  SUS_UI.cpp  XO_Board.cpp  XO_UI.cpp  clsFiveByFiveUI.cpp  (+20 more)
(+14 files in other folders)
